@@ -25,6 +25,8 @@ frostwire (5.2.1) stable; urgency=high
   * Fixes bug where downloading an individual file in a torrent wouldn't
     be marked in the search results as downloading.
   * Fixes a memory leak when importing ID3 tags into a playlist.
+  * Fixes bug where the duration of an MP3 file wasn't calculated correctly
+    by MPlayer, duration is now being calculated with Java library.
 
  -- FrostWire Team <contact@frostwire.com>  Tue, 27 Sep 2011 20:20:20 -0500
 
